<resources>
    <string name="app_name">NUMAD17F-ZhiyaoJin</string>
    <string name="main_title">Zhiyao Jin</string>
    <string name="about_btn">About</string>
    <string name="error_btn">Generate Error</string>
    <string name="dict_btn">Dictionary</string>
    <string name="game_btn">Word Game</string>

    <string name="about_title">About Me</string>
    <string name="about_name">Zhiyao Jin</string>
    <string name="about_email">jin.z@husky.neu.edu</string>
    <string name="about_year">2nd year</string>
    <string name="about_phone_id">123456</string>

    <string name="dict_title">Test Dictionary</string>
    <string name="dict_clear">Clear</string>

    <string name="acknowledgment_btn">Acknowledgment</string>
    <string name="acknowledgment_title">Acknowledgment</string>
    <string name="acknowledgment_source">Source:</string>
    <string name="source_assignment2">https://github.com/android/platform_development
        /blob/master/samples/SearchableDictionary/src/com/example/android/searchabledict
        /DictionaryDatabase.java</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="game_title">Scroggle Game</string>
    <string name="new_game_btn">New Game</string>
    <string name="game_result_title">Game Result</string>
    <string name="btn_replay">Replay</string>
    <string name="go_to_game_menu">Game Menu</string>

    <string name="edit_username_btn">Edit Username</string>
    <string name="edit_username_title">Edit Your Username</string>

    <string name="high_scores_btn">High Scores</string>
    <string name="leader_board_btn">Leader Board</string>
    <string name="score_board_btn">Score Board</string>
    <string name="game_username">Username: </string>
    <string name="game_score">Final Score: </string>
    <string name="game_word_and_score">Word with Highest Score: </string>
    <string name="game_date">Game Played: </string>

    <string name="congrats_btn">Congrats!</string>
    <string name="skip_btn">Skip</string>
    <string name="title_activity_congrats_dialog">CongratsDialogActivity</string>

</resources>
