<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="edu.neu.madcourse.zhiyaojin.fragment.GameMenuFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="@dimen/menu_text_size" />
    
    <Button
        android:id="@+id/new_game_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:text="@string/new_game_btn"/>

    <Button
        android:id="@+id/game_acknowledgment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:text="@string/acknowledgment_btn"/>

</LinearLayout>
